# efiXplorer

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
efiXloader/: Makefile  cmake_install.cmake  efiLoader.cpp  efiXloader64.dylib
efiXplorer/: Makefile  cmake_install.cmake  efiUtils.cpp  efiUtils.h  efiXplorer.dylib  efiXplorer64.dylib
modify/: shim.hpp
